# libab

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  background.md  circle.yml
.circleci/: config.yml
.circleci/images/primary/: Dockerfile
dep/tweetnacl/: tweetnacl.h
go/: ab.go  callback.go  callback.h  callback_gw.go  main.go
go/ab/: README.md  ab.go  callback.h  callback_gw.go
include/: ab.h
src/: ab.h  c.cc  flags.hpp  main.cc  sacq.h
src/message/: codec.hpp  decode.hpp  encoding.h  identity_message.hpp  leader_message.hpp  message.cc  message.hpp  message_times.hpp  ping_pong_message.hpp  randombytes.cc  randombytes.h
src/message_queue/: message_queue.cc  message_queue.hpp
src/node/: node.cc  node.hpp  peer_registry.hpp  registry.hpp  role.cc  role.hpp
src/peer/: peer.cc  peer.hpp
test/: encoding_test.cc  message_test.cc  role.cc  test_registry.hpp
